Experimental JS calculation

--- a/calculator.html
+++ b/calculator.html
@@ -24,25 +24,25 @@
               <tr>
                 <td>Activity 1</td>
                 <td>A1</td>
-                <td><input type="text" size="5" /> / <input type="text" size="5"/> </td>
+                <td><input type="text" size="5" name="act1"/> / <input type="text" size="5" name="act1"/> </td>
                 <td><span id="percentage-1"></span></td>
               </tr>
               <tr>
                 <td>Activity 2</td>
                 <td>A2</td>
-                <td><input type="text" size="5" /> / <input type="text" size="5"/> </td>
+                <td><input type="text" size="5" name="act2"/> / <input type="text" size="5" name="act2"/> </td>
                 <td><span id="percentage-2"></span></td>
               </tr>
               <tr>
                 <td>Activity 3</td>
                 <td>A3</td>
-                <td><input type="text" size="5" /> / <input type="text" size="5"/> </td>
+                <td><input type="text" size="5" name="act3"/> / <input type="text" size="5" name="act3"/> </td>
                 <td><span id="percentage-3"></span></td>
               </tr>
               <tr>
                 <td>Activity 4</td>
                 <td>A4</td>
-                <td><input type="text" size="5" /> / <input type="text" size="5"/> </td>
+                <td><input type="text" size="5" name="act4"/> / <input type="text" size="5" name="act4"/> </td>
                 <td><span id="percentage-4"></span></td>
               </tr>
               <tr class="totalCell">
@@ -56,8 +56,8 @@
           <br />
           <br />
           <div id="my-buttons">
-            <button>AVERAGE</button>
-            <button>MEAN</button>
+            <button onclick="avgCalc()">AVERAGE</button>
+            <button onclick="meanCalc()">MEAN</button>
           </div>
         </div>
       </div>
