Added blur for act1_boxes

--- a/calculator.html
+++ b/calculator.html
@@ -24,7 +24,7 @@
               <tr>
                 <td>Activity 1</td>
                 <td>A1</td>
-                <td><input type="text" size="5" name="act1"/> / <input type="text" size="5" name="act1"/> </td>
+                <td><input type="text" size="5" name="act1" id="act1_box1"/> / <input type="text" size="5" name="act1" id="act1_box2"/> </td>
                 <td><span id="percentage-1"></span></td>
               </tr>
               <tr>
