Trimmed layout in css Added JavaScript core implementation for blur, average, and mean Added IDs on HTML

--- a/calculator.html
+++ b/calculator.html
@@ -30,26 +30,26 @@
               <tr>
                 <td>Activity 2</td>
                 <td>A2</td>
-                <td><input type="text" size="5" name="act2"/> / <input type="text" size="5" name="act2"/> </td>
+                <td><input type="text" size="5" name="act2" id="act2_box1"/> / <input type="text" size="5" name="act2" id="act2_box2"/> </td>
                 <td><span id="percentage-2"></span></td>
               </tr>
               <tr>
                 <td>Activity 3</td>
                 <td>A3</td>
-                <td><input type="text" size="5" name="act3"/> / <input type="text" size="5" name="act3"/> </td>
-                <td><span id="percentage-3"></span></td>
+                <td><input type="text" size="5" name="act3" id="act3_box1"/> / <input type="text" size="5" name="act3" id="act3_box2"/> </td>
+                <td id="percentage-3"></td>
               </tr>
               <tr>
                 <td>Activity 4</td>
                 <td>A4</td>
-                <td><input type="text" size="5" name="act4"/> / <input type="text" size="5" name="act4"/> </td>
-                <td><span id="percentage-4"></span></td>
+                <td><input type="text" size="5" name="act4" id="act4_box1"/> / <input type="text" size="5" name="act4" id="act4_box2"/> </td>
+                <td id="percentage-4"></td>
               </tr>
               <tr class="totalCell">
                 <td class="totalCell"><strong>TOTAL</strong></td>
                 <td class="totalCell"></td>
                 <td class="totalCell"></td>
-                <td class="totalCell"><span id="percentage-total"></span></td>
+                <td class="totalCell" id="percentage-total"></td>
               </tr>
             </tbody>
           </table>
