Better decimal points

--- a/calculator.html
+++ b/calculator.html
@@ -24,25 +24,25 @@
               <tr>
                 <td>Activity 1</td>
                 <td>A1</td>
-                <td><input type="text" size="5" name="act1" id="act1_box1" onkeypress="return numberCheck(event)"/> / <input type="text" size="5" name="act1" id="act1_box2" onkeypress="return numberCheck(event)"/> </td>
+                <td><input type="text" size="5" name="act1" id="act1_box1" onkeypress="return numberCheck(this,event)"/> / <input type="text" size="5" name="act1" id="act1_box2" onkeypress="return numberCheck(this,event)"/> </td>
                 <td id="percentage-1"></td>
               </tr>
               <tr>
                 <td>Activity 2</td>
                 <td>A2</td>
-                <td><input type="text" size="5" name="act2" id="act2_box1" onkeypress="return numberCheck(event)"/> / <input type="text" size="5" name="act2" id="act2_box2" onkeypress="return numberCheck(event)"/> </td>
+                <td><input type="text" size="5" name="act2" id="act2_box1" onkeypress="return numberCheck(this,event)"/> / <input type="text" size="5" name="act2" id="act2_box2" onkeypress="return numberCheck(this,event)"/> </td>
                 <td id="percentage-2"></td>
               </tr>
               <tr>
                 <td>Activity 3</td>
                 <td>A3</td>
-                <td><input type="text" size="5" name="act3" id="act3_box1" onkeypress="return numberCheck(event)"/> / <input type="text" size="5" name="act3" id="act3_box2" onkeypress="return numberCheck(event)"/> </td>
+                <td><input type="text" size="5" name="act3" id="act3_box1" onkeypress="return numberCheck(this,event)"/> / <input type="text" size="5" name="act3" id="act3_box2" onkeypress="return numberCheck(this,event)"/> </td>
                 <td id="percentage-3"></td>
               </tr>
               <tr>
                 <td>Activity 4</td>
                 <td>A4</td>
-                <td><input type="text" size="5" name="act4" id="act4_box1" onkeypress="return numberCheck(event)"/> / <input type="text" size="5" name="act4" id="act4_box2" onkeypress="return numberCheck(event)"/> </td>
+                <td><input type="text" size="5" name="act4" id="act4_box1" onkeypress="return numberCheck(this,event)"/> / <input type="text" size="5" name="act4" id="act4_box2" onkeypress="return numberCheck(this,event)"/> </td>
                 <td id="percentage-4"></td>
               </tr>
               <tr class="totalCell">
